Yoinked some unused stuff

--- a/SimTECH/SimTECH/Pages/Season/Development/Developer.razor
+++ b/SimTECH/SimTECH/Pages/Season/Development/Developer.razor
@@ -13,7 +13,13 @@
     <MudGrid>
         <MudItem xs="12">
             <MudPaper Elevation="15" MinHeight="60px" Class="pa-2 text-center">
-                <MudText Typo="Typo.h3">Entrant Development</MudText>
+                <MudText Typo="Typo.h3">
+                    Entrant Development
+                    <sub>bot</sub>
+                    <sup>top</sup>
+                </MudText>
+                <sub>I am a bottom</sub>
+                <sup>I am a top</sup>
             </MudPaper>
         </MudItem>
         @if (!loading)
