--- a/SimTECH/SimTECH/Pages/Traits/TraitAssign.razor
+++ b/SimTECH/SimTECH/Pages/Traits/TraitAssign.razor
@@ -1,4 +1,5 @@
 ﻿@page "/traitassign"
+
 @inject DriverService _driverService
 @inject LeagueService _leagueService
 @inject TeamService _teamService
@@ -80,6 +81,7 @@
                               Items="@entrants"
                               Dense="true"
                               Hover="true"
+                              FixedHeader="true"
                               OnRowClick="OnClickAssignRandomTrait">
                         <ToolBarContent>
                             <MudText Typo="Typo.h5">Entrants</MudText>
